# pandora-magic-box

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/command/: mod.rs  redis.rs
src-tauri/src/dao/: redis.rs
src-tauri/src/driver/: app_server.rs  db_connection.rs  mod.rs  redis_connection.rs
src/Layout/: index.tsx
src/Layout/AppContainer/: index.tsx
src/Layout/AppHeader/: NavToggle.tsx  ThemeSwitch.tsx  index.tsx
src/Layout/AppNav/: index.tsx
src/Layout/AppSetting/: index.tsx
src/components/Developing/: index.tsx
src/components/SvgColor/: index.tsx
src/components/grid/CustomNoRowsOverlay/: index.tsx
src/pages/application/Redis/: InfoForm.tsx  KeysGrid.tsx  RedisDetail.tsx  RedisState.tsx  index.less  index.tsx
src/pages/application/Redis/KeysContainer/: KeyForm.tsx  KeyInfo.tsx  index.tsx
src/pages/application/Todo/: index.tsx
src/pages/dashboard/BaseDashboard/: index.tsx
src/pages/dashboard/Workspace/: index.tsx
src/pages/error/: NotFoundPage.tsx
src/routes/: index.tsx
src/store/: index.ts
src/store/settings/: index.ts
src/styles/: App.less  main.less
