[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["api-all"] }
tokio = {version = "1.27", features = ["full"] }
sqlx = { version = "0.6", features = [ "sqlite", "runtime-tokio-native-tls" ] }
chrono = {version = "0.4", features = ["serde"] }
futures = "0.3"
uuid = { version = "1.3", features = [ "v4", "fast-rng", "macro-diagnostics" ] }
redis = { version = "0.22", features = ["tokio-comp", "cluster"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
